# text-clf-base

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  ruff_defaults.toml
data/sample/: test_label.txt  test_text.txt  train_label.txt  train_text.txt  val_text.txt  valid_label.txt
notebook/: train.ipynb
scripts/: cli.py  train.py
src/text_clf_base/: data.py  model.py  util.py
tests/: test_data.py
